--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -68,7 +68,7 @@ jobs:
           path: dist
   deploy:
     needs: build
-    uses: ./reusable
+    uses: ./.github/workflows/reusable.yml
   report:
     needs: [ lint, deploy ]
     if: failure()
